2.1.0/_sources/gallery/pie_and_polar_charts/polar_legend.rst.txt


.. _sphx_glr_gallery_pie_and_polar_charts_polar_legend.py:


============
Polar Legend
============

Demo of a legend on a polar-axis plot.




.. image:: /gallery/pie_and_polar_charts/images/sphx_glr_polar_legend_001.png
    :align: center





.. code-block:: python

    import numpy as np
    from matplotlib.pyplot import figure, show, rc

    # radar green, solid grid lines
    rc('grid', color='#316931', linewidth=1, linestyle='-')
    rc('xtick', labelsize=15)
    rc('ytick', labelsize=15)

    # force square figure and square axes looks better for polar, IMO
    fig = figure(figsize=(8, 8))
    ax = fig.add_axes([0.1, 0.1, 0.8, 0.8],
                      projection='polar', facecolor='#d5de9c')

    r = np.arange(0, 3.0, 0.01)
    theta = 2 * np.pi * r
    ax.plot(theta, r, color='#ee8d18', lw=3, label='a line')
    ax.plot(0.5 * theta, r, color='blue', ls='--', lw=3, label='another line')
    ax.legend()

    show()

**Total running time of the script:** ( 0 minutes  0.016 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: polar_legend.py <polar_legend.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: polar_legend.ipynb <polar_legend.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
